<resources>
    <string name="app_name">VacunatorioApp4</string>
    <string name="navigation_drawer_open">Abrir el menu</string>
    <string name="navigation_drawer_close">Cerrar el menu</string>
    <string name="nav_header_title">Vacunatorio</string>
    <string name="nav_header_subtitle">vacunatorioapp@gmail.com</string>
    <string name="nav_header_desc">Encabezado de la barra lateral</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_home">Vista principal</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Matricula</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Logueate o registrate</string>
    <string name="action_sign_in_short">Logueate</string>
    <string name="welcome">"¡Bienvenido!"</string>
    <string name="invalid_username">Matricula no valida</string>
    <string name="invalid_password">La contraseña debe contener al menos 5 caracteres</string>
    <string name="login_failed">"Login fallido"</string>
    <string name="matricula">Matrícula</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="olvide_mi_contrasenia">Olvide mi contraseña</string>
    <string name="registrarse">Registrarse</string>
    <!-- Strings related to registration -->
    <string name="escanear_codigo">Escanear Código de Barras</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="dni">DNI</string>
    <string name="telefono">Teléfono</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="genero">Género</string>
    <string name="email">Email</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="tipo_de_vacuna">Tipo de vacuna</string>
    <string name="relacion_tutor">Relación con el tutor</string>
    <string name="hora_de_la_cita">Hora de la cita</string>
    <!-- Strings related to navigation drawer -->
    <string name="menu_perfil">Mi perfil</string>
    <string name="menu_cambiar_password">Cambiar contraseña</string>
    <string name="menu_paciente">Registrar pacientes</string>
    <string name="menu_tutor">Registrar tutores</string>
    <string name="menu_turno">Turnos</string>
    <string name="menu_aplicacion">Aplicaciones</string>
    <string name="menu_deslogeo">Desloguearse</string>
    <string name="menu_fechas">Fechas de turnos disponibles</string>
    <string name="fingerprint">Ingrese la huella digital para ingresar en la aplicación</string>
    <string-array name="genero_array">
        <item>Seleccione el género del paciente</item>
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>
    <string-array name="meses">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
</resources>