<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/icon_perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_agregar_paciente"
            android:icon="@drawable/icon_registro"
            android:title="@string/menu_registro" />
        <item
            android:id="@+id/nav_deslogeo"
            android:icon="@drawable/icon_logout"
            android:title="@string/menu_deslogeo" />
    </group>
</menu>